# RecWebpage

./: README.md
Recwebpage/backend/: alembic.ini  pyproject.toml  requirements.txt
Recwebpage/backend/app/: config.py  main.py
Recwebpage/backend/app/model/: mixins.py  person.py  role.py  user_role.py  users.py
Recwebpage/backend/app/repository/: auth_repo.py  base_repo.py  person.py  role.py  users.py
Recwebpage/backend/migrations/: env.py
Recwebpage/backend/migrations/versions/: f33e3a62555d_add_table.py
